# data-quality-agent

./: .gitignore  Makefile  README.md  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  vercel.json
.claude/: settings.json
api/: index.py  mcp.py
src/: config.py  docs_html.py  image_loader.py  models.py  server.py
src/checks/: __init__.py  color.py  format_check.py  illumination.py  metadata.py  resolution.py  sharpness.py
src/ml/: eyeq.py
tests/: conftest.py  test_checks.py  test_models.py
