# NOTE: This file is for local tooling config only (ruff, mypy, pytest).
# Vercel uses requirements.txt for deployment.
# Do NOT add [project] or [build-system] — Vercel will try uv sync and fail.

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
